@@ -1,12 +1,10 @@
-README for librsvg 1.1.
-
 This is librsvg 1.1 - the GNOME 2.0 platform development version of
 librsvg.
 
 If you are looking for the stable version to use with the GNOME
 1.4 platform, please obtain librsvg from GNOME CVS as follows:
 
-cvs co -r librsvg-1-0 librsvg
+	cvs co -r librsvg-1-0 librsvg
 
 If you have questions or comments about librsvg, please send 
 email to nautilus-list@lists.eazel.com
